# iron-oxide

./: .gitignore  Cargo.toml  server.toml
config/v1_20_6/: registry-data.json  tags.json
crates/common/: Cargo.toml
crates/common/src/: config.rs  connection.rs
crates/common/tests/: config_test.rs
crates/game/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  lib.rs  macros.rs  stream.rs
crates/protocol/src/packet/: data.rs  mod.rs  raw_data.rs  types.rs
crates/protocol/src/packet/handshake/: mod.rs
crates/protocol/src/packet/login/: mod.rs
crates/protocol/src/packet/status/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  connection.rs  connection_handler.rs  main.rs
crates/server/src/handlers/: configuration.rs  handshake.rs  login.rs  mod.rs  status.rs
crates/server/src/network/: mod.rs
crates/versions/: Cargo.toml
crates/versions/src/: lib.rs  stream.rs
crates/versions/src/v1_20_6/: mod.rs
crates/versions/src/v1_20_6/handlers/: configuration.rs  login.rs  mod.rs  status.rs
crates/versions/src/v1_20_6/packets/: configuration.rs  handshake.rs  login.rs  mod.rs  status.rs
crates/versions/src/v1_21_5/: mod.rs
crates/versions/src/v1_21_5/handlers/: configuration.rs  login.rs  status.rs
crates/versions/src/v1_21_5/packets/: handshake.rs  login.rs  status.rs
crates/world/: Cargo.toml
crates/world/src/: chunk.rs  lib.rs  palette.rs  world.rs
