[package]
name = "iron-oxide-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
iron-oxide-protocol = { path = "../protocol" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
bytes = "1"
anyhow = "1"
async-trait = "0.1"
