[package]
name = "iron-oxide-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
protocol = { path = "../protocol", package = "iron-oxide-protocol" }
serde_json = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }