[package]
name = "iron-oxide-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
iron-oxide-protocol = { path = "../protocol" }
iron-oxide-versions = { path = "../versions" }
iron-oxide-common = { path = "../common" }
serde_json = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
uuid = { version = "1.8.0", features = ["v3"] }
