[package]
name = "iron-oxide-versions"
version = "0.1.0"
edition = "2021"

[dependencies]
iron-oxide-protocol = { path = "../protocol" }
iron-oxide-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v3"] }
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"